// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResidentList should match snapshot (new selection) 1`] = `
.css-0,
[data-css-0] {
  width: 100%;
  height: 10%;
  color: #163172;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

.css-2,
[data-css-2] {
  width: 100%;
  height: 10%;
  color: #163172;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #c8daea;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-2:hover,
[data-css-2]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

.css-4,
[data-css-4] {
  background-color: #d6e4f0;
  overflow-y: auto;
  width: 20%;
  height: 100%;
}

.css-5,
[data-css-5] {
  width: 100%;
  height: 5%;
  color: #163172;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-5:hover,
[data-css-5]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

<div>
  <div
    class="genericList"
    data-css-4=""
  >
    <div
      class="listElement"
      data-css-5=""
    >
      Neuer Mieter
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max0 Mustermann0
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max1 Mustermann1
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement selectedListElement"
      data-css-2=""
    >
      Max2 Mustermann2
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max3 Mustermann3
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max4 Mustermann4
    </div>
  </div>
</div>
`;

exports[`ResidentList should match snapshot (opened modal) 1`] = `
.css-0,
[data-css-0] {
  width: 100%;
  height: 10%;
  color: #163172;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

.css-2,
[data-css-2] {
  width: 100%;
  height: 10%;
  color: #163172;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #c8daea;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-2:hover,
[data-css-2]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

.css-4,
[data-css-4] {
  background-color: #d6e4f0;
  overflow-y: auto;
  width: 20%;
  height: 100%;
}

.css-5,
[data-css-5] {
  width: 100%;
  height: 5%;
  color: #163172;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-5:hover,
[data-css-5]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

<div>
  <div
    class="modalMock"
  />
  <div
    class="genericList"
    data-css-4=""
  >
    <div
      class="listElement"
      data-css-5=""
    >
      Neuer Mieter
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement selectedListElement"
      data-css-2=""
    >
      Max0 Mustermann0
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max1 Mustermann1
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max2 Mustermann2
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max3 Mustermann3
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max4 Mustermann4
    </div>
  </div>
</div>
`;

exports[`ResidentList should match snapshot 1`] = `
.css-0,
[data-css-0] {
  width: 100%;
  height: 10%;
  color: #163172;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

.css-2,
[data-css-2] {
  width: 100%;
  height: 10%;
  color: #163172;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #c8daea;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-2:hover,
[data-css-2]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

.css-4,
[data-css-4] {
  background-color: #d6e4f0;
  overflow-y: auto;
  width: 20%;
  height: 100%;
}

.css-5,
[data-css-5] {
  width: 100%;
  height: 5%;
  color: #163172;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-5:hover,
[data-css-5]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

<div>
  <div
    class="genericList"
    data-css-4=""
  >
    <div
      class="listElement"
      data-css-5=""
    >
      Neuer Mieter
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement selectedListElement"
      data-css-2=""
    >
      Max0 Mustermann0
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max1 Mustermann1
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max2 Mustermann2
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max3 Mustermann3
    </div>
    <hr
      class="hr"
    />
    <div
      class="listElement"
      data-css-0=""
    >
      Max4 Mustermann4
    </div>
  </div>
</div>
`;
